# csv-analysis-agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/agents/: agent_csv.py
src/data_processing/: file_processor.py
src/prompts/: prompt_csv_agent.py
src/streamlit_app/: agent_interface.py
src/tools/: available_csvs.py  visualization_tools.py
