[project]
name = "csv-analysis-agent"
version = "0.1.0"
description = "Projeto do desafio extra feito pela I2A2"
authors = [
    {name = "João Vitor",email = "joaovitoralcantara30@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-genai (>=1.39.1,<2.0.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
